--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "dotenv": "^10.0.0",
     "iconsax-react": "^0.0.4",
     "next": "^12.0.7",
+    "next-runtime-dotenv": "^1.4.0",
     "react": "17.0.2",
     "react-cropper": "^2.1.8",
     "react-dom": "17.0.2",
     "react-textarea-autosize": "^8.3.3",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
